# rover

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  modprobe-setup.sh  package.xml  plugin.xml  setup.py
OLD/differential_drive/: README.md  package.xml
rly_08/: CMakeLists.txt  README.md  package.xml
rly_08/launch/: rly_08.launch
rly_08/msg/: rly08_io_msg.msg
rly_08/src/: Component.cc  rly08.cc  rly08_node.cpp
rly_08/srv/: GetRelayStatus.srv  GetSwVersion.srv
ros_talon/: CMakeLists.txt  package.xml
ros_talon/config/: motor_gains.yaml  motor_param.yaml
ros_talon/launch/: motor_drivers.launch
ros_talon/msg/: cmd.msg
ros_talon/src/: TalonModes.cpp  TalonSRX.cpp  direct_drive.cpp  direct_drive1.cpp  direct_drive2.cpp  direct_drive3.cpp  direct_drive4.cpp  direct_drive5.cpp  direct_drive6.cpp  servo_pos.cpp
rover_antenna/: CMakeLists.txt  package.xml
rover_antenna/launch/: antenna.launch.py
rover_antenna/rover_antenna/: CMakeLists.txt  package.xml
rover_antenna/src/: antennaAbtr.cpp  antennaJoy.cpp  antenna_abtr.cpp  antenna_joy.cpp  antenna_udp.cpp  arbitration.cpp  auto_mode.cpp  autonomus.cpp  client_to_esp.cpp  client_to_esp2.cpp  jog_antenna.cpp  pub_msg_gps_coord  udp.cpp
rover_antenna/tests/: pub_msg_gps_coord
rover_arm/: CMakeLists.txt  package.xml
rover_arm/include/: arm_configuration.hpp  keybinding.hpp  robot_configuration.hpp
rover_arm/launch/: arm.launch.py
rover_arm/src/: arbitration.cpp  cart_logic.cpp  kinematic.txt  teleop.cpp
rover_auxiliary/: CMakeLists.txt  package.xml
rover_auxiliary/launch/: auxiliary.launch.py  auxiliary_base.launch.py  auxiliary_rover.launch.py
rover_auxiliary/scripts/: aruco.py  arucoOLD.py  aruco_main.py  panorama_service.py  parsing_node.py  redistribute_stream.py  screenshot_service.py
rover_auxiliary/src/: compass_calibrator.cpp  goal_manager.cpp  light_control.cpp  media_repeter.cpp
rover_can/: CMakeLists.txt  package.xml
rover_can/launch/: can.launch.py
rover_can/src/: can_master.cpp  can_translator.cpp
rover_control/: CMakeLists.txt  package.xml
rover_control/config/: aggregator.yaml  dynamixel.yaml  global_ekf_localization.yaml  joy_keybind.yaml  local_ekf_localization.yaml  watchdog.yaml  watchdog_simple.yaml
rover_control/launch/: base.launch  cam_IR.launch  cam_arducam.launch  cam_arriere.launch  cam_base_bras.launch  cam_bras.launch  cam_desaxee.launch  cam_main.launch  cam_pelle.launch  cam_sonix.launch  camera_control.launch  camera_control_server.launch  can.launch  control.launch  full_simple_teleop.launch  joy.launch  joy_demux.launch  local_teleop.launch  machine_config.launch  module_science.launch  motor_drivers.launch  motor_drivers_test.launch  nmea_serial_driver.launch  panorama.launch  ptu.launch  relay_control.launch  rover.launch  rtimulib_ros.launch  simple_teleop.launch  teleop_joystick.launch  teleop_keyboard.launch  teleop_twist_server.launch  watchdog.launch
rover_control/src/: base_heartbeat.cpp  camera_control_server.cpp  cmd_2_motors.cpp  cmd_mux.py  comm_led_heartbeat.py  gps_node.cpp  joy_demux.py  panorama_server.cpp  relay_board.py  sensor_watchdog.py  teleop_joystick.cpp  teleop_joystick.py  twist2motor_cmd.py
rover_control_msgs/: CMakeLists.txt  package.xml
rover_control_msgs/msg/: gps.msg
rover_control_msgs/srv/: camera_control.srv  panorama.srv
rover_drive_train/: CMakeLists.txt  package.xml
rover_drive_train/launch/: drive_train.launch.py  driver_train.launch.py
rover_drive_train/src/: arbitration.cpp  teleop.cpp  watchdog.cpp
rover_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rover_gui/include/: QFileItem.hpp  QFileTransferWidget.hpp  QLogin.hpp  QSshFileExplorer.hpp  SshHandler.hpp  StyleSheet.hpp  icon_manager.hpp  q_file_item.hpp  q_file_transfer_widget.hpp  q_ssh_file_explorer.hpp  style_sheet.hpp
rover_gui/launch/: gui.launch.py  ui.launch
rover_gui/log/: saved_locations.txt
rover_gui/navigation/: handlers.py  location_manager.py  panorama_handler.py  route_manager.py
rover_gui/new_gui/: main.py
rover_gui/pages/: add_location_popup.py  calibrate_heading_popup.py  cameras.py  dashboard.py  folium_map.py  home.py  navigation.py  rtsp_player.py  waypoint_popup.py
rover_gui/resource/: cameras_ips.txt  coord.txt  r1m_ips.txt  rover.ui  rover_ui.ui  test.ui
rover_gui/rover_gui/: gps_talker.py  main.py  main_gui.py  main_window.py  sub.py  ui_node.py
rover_gui/saved_files/: gps_offset.txt  saved_locations.txt  saved_routes.json
rover_gui/scripts/: rover_gui
rover_gui/src/: IconManager.cpp  SshWorker.cpp  application.cpp  file_transfer_widget.ui  login_example_widget.ui  main_gui.cpp
rover_gui/static/: resource.qrc  resource_rc.py
rover_gui/ui/: add_location.ui  add_waypoint.ui  calibrate_heading_popup.ui  cameras.ui  dashboard.ui  folium_map.ui  generate_ui.sh  home.ui  main_window.ui  map.ui  navigation.ui  toggle.ui  waypoint_list.ui
rover_gui/widgets/: toggle.ui  toggler.py
rover_helper/: CMakeLists.txt  package.xml
rover_helper/include/: rover_ros_serial.hpp
rover_helper/launch/: base.launch.py  rover.launch.py  terminal_logger.py
rover_helper/script/: auto_start_rover.sh
rover_helper/src/: debug_printer.cpp  rover_rosserial_manager.cpp
rover_joy/: CMakeLists.txt  package.xml
rover_joy/launch/: joy.launch.py
rover_joy/src/: joy_demux.cpp  joy_formator.cpp
rover_msgs/: CMakeLists.txt  package.xml
rover_msgs/msg/: AntennaArbitrationStatus.msg  AntennaCmd.msg  ArmCmd.msg  ArmMsg.msg  Aruco.msg  CameraControl.msg  CanDeviceStatus.msg  Compass.msg  DrivetrainArbitration.msg  Gps.msg  Joy temp.msg  Joy.msg  LightControl.msg  MotorCmd.msg  PropulsionMotor.msg  ScienceControl.msg  gps.msg
rover_msgs/src/: lib.cpp
rover_msgs/srv/: AntennaArbitration.srv  CompassCalibration.srv  NewGpsGoal.srv  (+7 more)
rover_nav/: CMakeLists.txt  README.md  gpsGoals.txt  mapvizconfig.mvc  package.xml
rover_navigation/: CMakeLists.txt  package.xml
rover_odometry/: CMakeLists.txt  package.xml
rover_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rover_viz/: package.xml
(+673 files in other folders)
