<?xml version="1.0"?>
<package format="2">
    <name>rover_control</name>
    <version>0.0.0</version>
    <description>The rover_control package</description>

    <maintainer email="simon@todo.todo">simon</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_generation</depend>
    <depend>ros_talon</depend>
    <depend>rover_control_msgs</depend>

    <exec_depend>robot_localization</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>teleop_twist_keyboard</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosserial_arduino</exec_depend>
    <exec_depend>realsense2_camera</exec_depend>
    <exec_depend>realsense2_description</exec_depend>
    <exec_depend>rgbd_launch</exec_depend>
    <exec_depend>video_stream_opencv</exec_depend>
    <exec_depend>image_proc</exec_depend>

</package>
