<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_drive_train</name>
  <version>0.0.0</version>
  <description>
    rover_drive_train pkg contains teleop node
  </description>
  <maintainer email="save1403@usherbrooke.ca">emile</maintainer>
  <maintainer email="micp1402@usherbrooke.ca">phil</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>rover_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
