<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gui</name>
  <version>0.0.0</version>
  <description>
    rover_gui pkg contains the PyQt5 app to communicate with the rover
  </description>
  <maintainer email="Nathan.Dumoulin@usherbrooke.ca">nathan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
