<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_navigation</name>
  <version>0.0.0</version>
  <description>
    light_control pkg contains required nodes for navigation, this includes lights, cameras and other aux. 
  </description>
  <maintainer email="micp1402@usherbrooke.ca">phil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rover_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>ament_index_cpp</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
